apps/dober-dan/webservice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dober-dan-service
  namespace: halo
spec:
  type: ClusterIP
  selector:
    app: dober-dan
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
